Fixed bug 71: Browser does not support mode for all objects (not just with images). We may revisit this to provide more support in next release. Fixed bug 78: Browser does not support mode for all objects (not just with images) Did some work on bug 66: Browser page is slow to load. Better on Firefox, but still slow on Win-IE. Adjusted some text on browser page.

--- a/trunk/themes/pahma/style/style.css
+++ b/trunk/themes/pahma/style/style.css
@@ -952,3 +952,16 @@ div.tree li.expanded {
 		text-indent:0px;
 		margin:0px;
 }
+
+div.tree li span {
+	color:#00a6e6;
+	text-decoration:none;
+	cursor:pointer !important;
+}
+
+div.tree li span.c1,
+div.tree li span.c2 {
+	color: #61615F;
+	text-decoration:none;
+	cursor:pointer !important;
+}
